--- a/Pacman.html
+++ b/Pacman.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PAC-MAN</title>
+  <title>GOT-CAKE</title>
   
   <link rel="stylesheet" type="text/css" href="css/Pacman.css" />
   
