add domain & https

--- a/Leaderboard.html
+++ b/Leaderboard.html
@@ -10,7 +10,7 @@
   <script>
     $(document).ready(function() {
         $.ajax({
-                url: 'http://207.148.5.142/get',
+                url: 'https://gotcakevps.xyz/get',
                 data: null,
                 type: 'GET',
                 // crossDomain: true,
