--- a/Leaderboard.html
+++ b/Leaderboard.html
@@ -17,7 +17,7 @@
                 dataType: 'text',
                 success: function(data, status) { 
                     JSON.parse(data).forEach(function(d) {
-                        $('#leaderboard').append('<span>' + d.address + ': ' + d.score + '</span><br>');
+                        $('#leaderboard').append('<li>' + d.address + ': ' + d.score + '</li><br>');
                     });
                 },
                 error: function(err) { 
@@ -32,8 +32,8 @@
 <body style="text-align: center; color:white; font-size: 20px;">
     <a href="Pacman.html"><button href="Pacman.html">Play GotCake Pacman!</button></a><br><br>
     Leaderboard<br><br>
-    <div id="leaderboard" style="font-size: 16px;">
+    <ol id="leaderboard" style="font-size: 16px;">
  
-    </div>
+    </ol>
 </body>
 </html>
