--- a/Leaderboard.html
+++ b/Leaderboard.html
@@ -32,8 +32,10 @@
 <body style="text-align: center; color:white; font-size: 20px;">
     <a href="Pacman.html"><button href="Pacman.html">Play GotCake Pacman!</button></a><br><br>
     Leaderboard<br><br>
-    <ol id="leaderboard" style="font-size: 16px;">
- 
-    </ol>
+    <div style="text-align: center;">
+        <ol id="leaderboard" style="font-size: 16px;">
+    
+        </ol>
+    </div>
 </body>
 </html>
