--- a/Leaderboard.html
+++ b/Leaderboard.html
@@ -31,7 +31,7 @@
 </head>
 <body style="text-align: center; color:white; font-size: 20px;">
     <a href="Pacman.html"><button href="Pacman.html">Play GotCake Pacman!</button></a><br><br>
-    Leaderboard<br><br>
+    Leaderboard 🏆<br><br>
     <div style="text-align: center;">
         <ol id="leaderboard" style="font-size: 16px;">
     
